# bored_api_rust

./: CHANGELOG.md  Cargo.toml  LICENSE.txt
src/: lib.rs
